--- a/registro-profesional.html
+++ b/registro-profesional.html
@@ -4,17 +4,159 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Profesional - ManosUY</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        body { font-family: Arial, sans-serif; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; background-color: #fff2e6; margin: 0; }
-        h1 { color: #2C3E50; text-align: center; font-size: 2.5em; }
-        p { margin-top: 20px; text-align: center; font-size: 1.2em; }
-        a { color: #FF8C00; text-decoration: none; font-weight: bold; }
-        a:hover { text-decoration: underline; }
+        :root {
+            --color-text-dark: #333333;
+            --color-orange-accent: #FFA500;
+            --color-light-gray-bg: #F0F0F0;
+            --color-white-bg: #FFFFFF;
+        }
+        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; box-sizing: border-box; color: var(--color-text-dark); background-color: var(--color-white-bg); line-height: 1.6; display: flex; flex-direction: column; min-height: 100vh; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; width: 100%; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; }
+        .header { background-color: var(--color-white-bg); padding: 20px 0; border-bottom: 1px solid #E0E0E0; }
+        .navbar { display: flex; justify-content: space-between; align-items: center; max-width: 1000px; margin: 0 auto; padding: 0 20px; }
+        .logo { font-family: 'Arial', sans-serif; font-size: 32px; font-weight: bold; color: var(--color-text-dark); text-decoration: none; display: flex; align-items: center; }
+        .logo i { margin-right: 8px; color: var(--color-orange-accent); font-size: 1em; }
+        .logo span { color: var(--color-orange-accent); margin-left: 5px; }
+        .nav-links { list-style: none; margin: 0; padding: 0; display: flex; align-items: center; }
+        .nav-links li { margin-left: 25px; }
+        .nav-links a { text-decoration: none; color: var(--color-text-dark); font-weight: normal; font-size: 18px; transition: color 0.3s ease; }
+        .nav-links a:hover { color: var(--color-orange-accent); }
+        .nav-links .btn-login { background-color: transparent; color: var(--color-text-dark); padding: 10px 20px; border: 2px solid var(--color-text-dark); border-radius: 5px; font-weight: normal; transition: background-color 0.3s ease, border-color 0.3s ease; }
+        .nav-links .btn-login:hover { background-color: var(--color-light-gray-bg); border-color: var(--color-orange-accent); }
+        
+        .form-section {
+            background-color: var(--color-white-bg);
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 500px; /* Ancho máximo para el formulario */
+            text-align: center;
+        }
+        .form-section h1 {
+            color: var(--color-text-dark);
+            margin-bottom: 30px;
+            font-size: 2.2em;
+        }
+        .form-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: var(--color-text-dark);
+        }
+        .form-group input[type="text"],
+        .form-group input[type="email"],
+        .form-group input[type="password"],
+        .form-group select,
+        .form-group textarea {
+            width: calc(100% - 20px);
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+        .form-group textarea {
+            resize: vertical;
+            min-height: 80px;
+        }
+        .btn-submit {
+            background-color: var(--color-orange-accent);
+            color: white;
+            padding: 12px 25px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-submit:hover {
+            background-color: #e09400;
+        }
+        .back-link {
+            display: block;
+            margin-top: 30px;
+            color: var(--color-orange-accent);
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .navbar { flex-direction: column; align-items: center; }
+            .nav-links { margin-top: 20px; }
+            .nav-links li { margin: 0 10px 10px 0; }
+            .form-section { padding: 25px; }
+            .form-section h1 { font-size: 1.8em; }
+        }
     </style>
 </head>
 <body>
-    <h1>¡Estás en la página de Registro de Profesional! 💼</h1>
-    <p>Aquí se llenará el formulario para que los trabajadores se registren.</p>
-    <p><a href="index.html">Volver a la página principal</a></p>
-</body>
+    <header class="header">
+        <div class="container navbar">
+            <a href="index.html" class="logo">
+                <i class="fas fa-handshake"></i> ManosUY<span>M</span>
+            </a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="foro-proyectos.html">FORO</a></li>
+                    <li><a href="para-trabajadores.html">TRABAJADORES</a></li>
+                    <li><a href="login.html" class="btn-login">Iniciar sesion</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        <section class="form-section">
+            <h1>Registro de Profesional 💼</h1>
+            <form>
+                <div class="form-group">
+                    <label for="nombre">Nombre Completo:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirm-password">Confirmar Contraseña:</label>
+                    <input type="password" id="confirm-password" name="confirm-password" required>
+                </div>
+                <div class="form-group">
+                    <label for="especialidad">Especialidad Principal:</label>
+                    <select id="especialidad" name="especialidad" required>
+                        <option value="">Selecciona una especialidad</option>
+                        <option value="electricista">Electricista</option>
+                        <option value="plomero">Plomero</option>
+                        <option value="albañil">Albañil</option>
+                        <option value="pintor">Pintor</option>
+                        <option value="jardinero">Jardinero</option>
+                        <option value="carpintero">Carpintero</option>
+                        <option value="limpieza">Limpieza</option>
+                        <option value="otro">Otro</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="descripcion">Breve Descripción de tu Experiencia:</label>
+                    <textarea id="descripcion" name="descripcion" rows="4"></textarea>
+                </div>
+                <button type="submit" class="btn-submit">Registrarme como Profesional</button>
+            </form>
+            <a href="index.html" class="back-link">Volver a la página principal</a>
+        </section>
+    </div>
+
+    <script src="script.js"></script> </body>
 </html>
