--- a/foro-proyectos.html
+++ b/foro-proyectos.html
@@ -4,17 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foro de Proyectos - ManosUY</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        body { font-family: Arial, sans-serif; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; background-color: #fffde6; margin: 0; }
-        h1 { color: #2C3E50; text-align: center; font-size: 2.5em; }
-        p { margin-top: 20px; text-align: center; font-size: 1.2em; }
-        a { color: #CC7722; text-decoration: none; font-weight: bold; }
-        a:hover { text-decoration: underline; }
+        :root {
+            --color-text-dark: #333333;
+            --color-orange-accent: #FFA500;
+            --color-light-gray-bg: #F0F0F0;
+            --color-white-bg: #FFFFFF;
+        }
+        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; box-sizing: border-box; color: var(--color-text-dark); background-color: var(--color-white-bg); line-height: 1.6; display: flex; flex-direction: column; min-height: 100vh; }
+        .container { max-width: 1000px; margin: 0 auto; padding: 20px; width: 100%; flex-grow: 1; }
+        .header { background-color: var(--color-white-bg); padding: 20px 0; border-bottom: 1px solid #E0E0E0; }
+        .navbar { display: flex; justify-content: space-between; align-items: center; max-width: 1000px; margin: 0 auto; padding: 0 20px; }
+        .logo { font-family: 'Arial', sans-serif; font-size: 32px; font-weight: bold; color: var(--color-text-dark); text-decoration: none; display: flex; align-items: center; }
+        .logo i { margin-right: 8px; color: var(--color-orange-accent); font-size: 1em; }
+        .logo span { color: var(--color-orange-accent); margin-left: 5px; }
+        .nav-links { list-style: none; margin: 0; padding: 0; display: flex; align-items: center; }
+        .nav-links li { margin-left: 25px; }
+        .nav-links a { text-decoration: none; color: var(--color-text-dark); font-weight: normal; font-size: 18px; transition: color 0.3s ease; }
+        .nav-links a:hover { color: var(--color-orange-accent); }
+        .nav-links .btn-login { background-color: transparent; color: var(--color-text-dark); padding: 10px 20px; border: 2px solid var(--color-text-dark); border-radius: 5px; font-weight: normal; transition: background-color 0.3s ease, border-color 0.3s ease; }
+        .nav-links .btn-login:hover { background-color: var(--color-light-gray-bg); border-color: var(--color-orange-accent); }
+        
+        .forum-section {
+            padding: 40px 0;
+            text-align: center;
+        }
+        .forum-section h1 {
+            color: var(--color-text-dark);
+            margin-bottom: 30px;
+            font-size: 2.2em;
+        }
+        .project-list {
+            display: grid;
+            grid-template-columns: 1fr; /* Una columna */
+            gap: 20px;
+        }
+        .project-card {
+            background-color: var(--color-white-bg);
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            padding: 25px;
+            text-align: left;
+        }
+        .project-card h3 {
+            margin-top: 0;
+            color: var(--color-text-dark);
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .project-card p {
+            font-size: 1em;
+            color: #666;
+            margin-bottom: 10px;
+        }
+        .project-meta {
+            font-size: 0.9em;
+            color: #888;
+            margin-top: 15px;
+            border-top: 1px solid #eee;
+            padding-top: 10px;
+        }
+        .project-card .view-btn {
+            background-color: var(--color-orange-accent);
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 0.9em;
+            margin-top: 15px;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+        }
+        .project-card .view-btn:hover {
+            background-color: #e09400;
+        }
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .navbar { flex-direction: column; align-items: center; }
+            .nav-links { margin-top: 20px; }
+            .nav-links li { margin: 0 10px 10px 0; }
+        }
     </style>
 </head>
 <body>
-    <h1>¡Bienvenido al Foro de Proyectos! 🗣️</h1>
-    <p>Los usuarios publicarán sus necesidades aquí, y los trabajadores podrán verlas y contactar.</p>
-    <p><a href="index.html">Volver a la página principal</a></p>
+    <header class="header">
+        <div class="container navbar">
+            <a href="index.html" class="logo">
+                <i class="fas fa-handshake"></i> ManosUY<span>M</span>
+            </a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="foro-proyectos.html">FORO</a></li>
+                    <li><a href="para-trabajadores.html">TRABAJADORES</a></li>
+                    <li><a href="login.html" class="btn-login">Iniciar sesion</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        <section class="forum-section">
+            <h1>Foro de Proyectos 🗣️</h1>
+            <p>Encuentra y postula a proyectos de construcción y mantenimiento publicados por clientes.</p>
+            <a href="#" class="btn-register" style="background-color: var(--color-text-dark); color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; display: inline-block; margin-bottom: 30px;">Publicar Nuevo Proyecto</a>
+
+            <div class="project-list">
+                <div class="project-card">
+                    <h3>Construcción de Deck de Madera</h3>
+                    <p>Se busca carpintero con experiencia en exteriores para construir un deck de 20m² en Carrasco.</p>
+                    <p><strong>Especialidad:</strong> Carpintería</p>
+                    <p><strong>Ubicación:</strong> Montevideo</p>
+                    <div class="project-meta">Publicado por: ClienteA · Hace 2 días</div>
+                    <a href="#" class="view-btn">Ver Detalles</a>
+                </div>
+                <div class="project-card">
+                    <h3>Reparación de Techo y Bajada Pluvial</h3>
+                    <p>Necesito un techista/plomero para reparar una filtración en el techo y una bajada de agua en el barrio Goes.</p>
+                    <p><strong>Especialidad:</strong> Techista, Plomería</p>
+                    <p><strong>Ubicación:</strong> Montevideo</p>
+                    <div class="project-meta">Publicado por: ClienteB · Hace 5 horas</div>
+                    <a href="#" class="view-btn">Ver Detalles</a>
+                </div>
+                 <div class="project-card">
+                    <h3>Mantenimiento Eléctrico en Local Comercial</h3>
+                    <p>Busco electricista matriculado para revisión y mantenimiento de instalación eléctrica en pequeño local comercial.</p>
+                    <p><strong>Especialidad:</strong> Electricista</p>
+                    <p><strong>Ubicación:</strong> Canelones</p>
+                    <div class="project-meta">Publicado por: ClienteC · Hace 1 día</div>
+                    <a href="#" class="view-btn">Ver Detalles</a>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
