--- a/registro-profesional.html
+++ b/registro-profesional.html
@@ -32,7 +32,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 500px; /* Ancho máximo para el formulario */
+            max-width: 500px;
             text-align: center;
         }
         .form-section h1 {
@@ -88,6 +88,24 @@
         .back-link:hover {
             text-decoration: underline;
         }
+        /* Mensajes de feedback */
+        #feedbackMessage {
+            margin-top: 20px;
+            padding: 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            display: none; /* Oculto por defecto */
+        }
+        #feedbackMessage.success {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        #feedbackMessage.error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
         /* Media Queries */
         @media (max-width: 768px) {
             .navbar { flex-direction: column; align-items: center; }
@@ -117,7 +135,7 @@
     <div class="container">
         <section class="form-section">
             <h1>Registro de Profesional 💼</h1>
-            <form>
+            <form id="registrationForm">
                 <div class="form-group">
                     <label for="nombre">Nombre Completo:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -154,9 +172,82 @@
                 </div>
                 <button type="submit" class="btn-submit">Registrarme como Profesional</button>
             </form>
+            <div id="feedbackMessage"></div>
             <a href="index.html" class="back-link">Volver a la página principal</a>
         </section>
     </div>
 
-    <script src="script.js"></script> </body>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
+    <script src="script.js"></script>
+
+    <script>
+        // Este script maneja la lógica de registro específica para esta página
+        document.getElementById('registrationForm').addEventListener('submit', async (e) => {
+            e.preventDefault(); // Prevenir el envío por defecto del formulario (recarga de página)
+
+            const nombre = document.getElementById('nombre').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirm-password').value;
+            const especialidad = document.getElementById('especialidad').value;
+            const descripcion = document.getElementById('descripcion').value;
+            const feedbackMessage = document.getElementById('feedbackMessage');
+
+            feedbackMessage.style.display = 'none'; // Ocultar mensajes anteriores
+            feedbackMessage.className = ''; // Limpiar clases de estado
+
+            if (password !== confirmPassword) {
+                feedbackMessage.textContent = 'Las contraseñas no coinciden.';
+                feedbackMessage.classList.add('error');
+                feedbackMessage.style.display = 'block';
+                return;
+            }
+
+            try {
+                // 1. Crear usuario en Firebase Authentication
+                const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+                const user = userCredential.user;
+
+                // 2. Guardar información adicional del profesional en Firestore
+                await db.collection('profesionales').doc(user.uid).set({
+                    nombre: nombre,
+                    email: email,
+                    especialidad: especialidad,
+                    descripcion: descripcion,
+                    uid: user.uid, // Guardar el UID de Firebase
+                    fechaRegistro: firebase.firestore.FieldValue.serverTimestamp() // Fecha de registro
+                });
+
+                feedbackMessage.textContent = '¡Registro exitoso! Te hemos creado tu cuenta de profesional.';
+                feedbackMessage.classList.add('success');
+                feedbackMessage.style.display = 'block';
+
+                // Limpiar el formulario
+                document.getElementById('registrationForm').reset();
+
+                // Opcional: Redirigir al usuario después de un registro exitoso
+                // setTimeout(() => {
+                //     window.location.href = 'login.html'; // Redirige a la página de login
+                // }, 3000); // Redirige después de 3 segundos
+                
+            } catch (error) {
+                console.error("Error al registrar: ", error);
+                let errorMessage = 'Error al registrar. Por favor, intenta de nuevo.';
+                if (error.code === 'auth/email-already-in-use') {
+                    errorMessage = 'Este correo electrónico ya está registrado.';
+                } else if (error.code === 'auth/invalid-email') {
+                    errorMessage = 'El formato del correo electrónico no es válido.';
+                } else if (error.code === 'auth/weak-password') {
+                    errorMessage = 'La contraseña debe tener al menos 6 caracteres.';
+                }
+                feedbackMessage.textContent = errorMessage;
+                feedbackMessage.classList.add('error');
+                feedbackMessage.style.display = 'block';
+            }
+        });
+    </script>
+</body>
 </html>
