--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 400px; /* Ancho máximo para el formulario */
+            max-width: 400px;
             text-align: center;
         }
         .login-section h1 {
@@ -68,71 +68,5 @@
             font-size: 1.1em;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            width: 100%; /* Botón al 100% */
+            width: 100%;
         }
-        .btn-login-submit:hover {
-            background-color: #e09400;
-        }
-        .forgot-password, .register-link {
-            display: block;
-            margin-top: 15px;
-            color: #666;
-            text-decoration: none;
-            font-size: 0.9em;
-        }
-        .forgot-password:hover, .register-link:hover {
-            text-decoration: underline;
-        }
-        .register-link a {
-            color: var(--color-orange-accent);
-            font-weight: bold;
-        }
-        /* Media Queries */
-        @media (max-width: 768px) {
-            .navbar { flex-direction: column; align-items: center; }
-            .nav-links { margin-top: 20px; }
-            .nav-links li { margin: 0 10px 10px 0; }
-            .login-section { padding: 25px; }
-            .login-section h1 { font-size: 1.8em; }
-        }
-    </style>
-</head>
-<body>
-    <header class="header">
-        <div class="container navbar">
-            <a href="index.html" class="logo">
-                <i class="fas fa-handshake"></i> ManosUY<span>M</span>
-            </a>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="foro-proyectos.html">FORO</a></li>
-                    <li><a href="para-trabajadores.html">TRABAJADORES</a></li>
-                    <li><a href="login.html" class="btn-login">Iniciar sesion</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <div class="container">
-        <section class="login-section">
-            <h1>Iniciar Sesión 🚪</h1>
-            <form>
-                <div class="form-group">
-                    <label for="username">Usuario o Email:</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="btn-login-submit">Ingresar</button>
-            </form>
-            <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
-            <p class="register-link">¿No tienes cuenta? <a href="registro-profesional.html">Regístrate aquí</a></p>
-            <a href="index.html" class="back-link" style="margin-top: 20px; display: block; color: var(--color-orange-accent); text-decoration: none;">Volver a la página principal</a>
-        </section>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
