--- a/login.html
+++ b/login.html
@@ -70,3 +70,10 @@
             transition: background-color 0.3s ease;
             width: 100%;
         }
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
+    <script src="script.js"></script>
+    </body>
+</html>
